--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
@@ -31,15 +31,19 @@ a .logostudio {
     color: #2e2f42;
 }
 
-.nav-link {
+.navlink {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+.navlink:hover,
+.navlink:focus {
+    color: #404BBF;
+}
 
-.contacts-link  {
+.contactslink  {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
@@ -48,8 +52,8 @@ color: #434455;
 }
 .nameone {
 background-color: #2e2f42;
-font-weight: 700;
-font-size: 56px;
+font-weight: 500;
+font-size: 20px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
@@ -97,7 +101,7 @@ color: #2e2f42;
 .footerlogo {
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #f4f4fd;
