--- a/css/styles.css
+++ b/css/styles.css
@@ -38,34 +38,37 @@ a .logostudio {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.navlink:hover,
-.navlink:focus {
-    color: #404BBF;
+.nav-link:hover,
+.nav-link:focus {
+    color: #404bbf;
 }
 
-.contactslink  {
+.contacts-link  {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+font-style: normal;
 }
 .nameone {
 background-color: #2e2f42;
-font-weight: 500;
-font-size: 20px;
+font-weight: 700;
+font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
 }
 .klic {
-background: #4d5ae5;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #fff;
+ background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
 }
 
 .namethree {
@@ -105,7 +108,7 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #f4f4fd;
-font-style: normal;
+
 }
 
 .footertext {
@@ -115,5 +118,5 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
-font-style: normal;
+
 }
