--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ font-family: "Raleway", sans-serif;*/
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color:#fff;
+    background-color:#ffffff;
 }
 ul {
     list-style-type: none;
@@ -58,7 +58,7 @@ font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
-color: #fff;
+color: #ffffff;
 }
 .klic {
  background-color: #4D5AE5;
@@ -88,10 +88,11 @@ color: #434455;
 .nametwo {
 font-weight: 700;
 font-size: 36px;
-line-height: 1.11111;
+line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+text-transform: capitalize;
 }
 
 .onesection {
@@ -119,4 +120,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
 
+}
+.backgroundteam {
+   background:#ffffff; 
 }
