--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ a .logostudio {
     color: #2e2f42;
 }
 
-.navlink {
+.nav-link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -41,6 +41,9 @@ a .logostudio {
 .nav-link:hover,
 .nav-link:focus {
     color: #404bbf;
+}
+.contacts{
+    font-style: normal;
 }
 
 .contacts-link  {
