--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,8 @@ a .logostudio {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.nav-link:hover,
-.nav-link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
     color: #404bbf;
 }
 .contacts{
