--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ a .logostudio {
 }
 .contacts-link:hover,
 .contacts-link:focus {
-    background-color: #404bbf;
+    color: #404bbf;
 }
 .klic:hover,
 .klic:focus {
